# rusty-archive-viewer

./: .gitignore  README.md  package-lock.json  package.json  response.raw  tailwind.config.js  vite.config.ts
coverage/: clover.xml  coverage-final.json  index.html
coverage/rusty-archive-viewer/: index.html  postcss.config.js.html  tailwind.config.js.html
coverage/rusty-archive-viewer/src/: App.tsx.html  index.html  index.tsx.html  router.tsx.html
coverage/rusty-archive-viewer/src/components/: Modal.tsx.html  index.html
coverage/rusty-archive-viewer/src/components/chart/: ChartJS.tsx.html  index.html  types.ts.html
coverage/rusty-archive-viewer/src/components/controls/: AxisManager.tsx.html  AxisPropertiesDialog.tsx.html  (+14 more)
coverage/rusty-archive-viewer/src/pages/: ArchiveViewer.tsx.html  DebugDialog.tsx.html  DebugView.tsx.html  index.html
coverage/rusty-archive-viewer/src/types/: index.html  index.ts.html
coverage/rusty-archive-viewer/src/utils/: archiverApi.ts.html  debounce.ts.html  index.html
src/: App.css  App.tsx  index.css  index.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  comprehensive_performance_report.json  comprehensive_performance_report4.json  comprehensive_performance_report_1.json  comprehensive_performance_report_2.json  comprehensive_performance_report_3.json  tauri.conf.json
src-tauri/src/: archiver.proto  client.rs  commands.rs  constants.rs  decode.rs  decode_helpers.rs  epics.rs  error.rs  export.rs  lib.rs  main.rs  mod.rs  types.rs
src-tauri/src/archiver/: api copy.rs  api.rs  cache.rs  client.rs  commands.rs  constants.rs  error.rs  export.rs  health.rs  metrics.rs  mod.rs  session.rs  tests.rs  types.rs  validation.rs
src-tauri/tests/: client_benchmark_tests.rs  client_performance_tests.rs  client_tests.rs  command_tests.rs
src/components/: AxisPropertiesDialog.tsx  Modal.tsx
src/components/chart/: ChartJS.tsx  ChartuPlot.tsx  EPICSChart.tsx  UPlotChart copy.tsx  UPlotChart.tsx  types copy.ts  types.ts
src/components/controls/: AxisManager.tsx  AxisPropertiesDialog.tsx  ConfigurationManager.tsx  ConnectionStatus.tsx  ControlPanel.tsx  ExportDialog.tsx  LiveModeControls.tsx  PVList.tsx  PVSelector.tsx  PenPropertiesDialog.tsx  TimeRangeSelector.tsx  UnifiedManager.tsx  types.ts
src/components/controls copy/: ChartControl.tsx  ConfigurationControl.tsx  Controls.tsx  LiveControl.tsx  PVControl.tsx  TimeRangeControl.tsx  colors.ts  types copy.ts  types.ts
src/components/controls copy/hooks/: useTimeRange.ts
src/components/controls copy/old/: PVListItem.tsx  PVSelector.tsx  PenPropertiesDialog.tsx
src/components/controls copy/utils/: index.ts
src/components/controls/ChartControl/: ChartSettingsDialog.tsx  index.tsx
src/components/controls/ConfigurationControl/: SaveConfigDialog.tsx  index.tsx
src/components/controls/Controls/: index.tsx
src/components/controls/LiveControl/: LiveSettingsDialog.tsx  index.tsx
src/components/controls/PVControl/: PVList.tsx  PVListItem.tsx  index.tsx
src/components/controls/TimeRangeControl/: TimeRangeSelector.tsx  index.tsx
src/components/dialogs/: PenPropertiesDialog.tsx
src/components/ui/: alert.tsx  dialog.tsx
src/pages/: ArchiveViewer.tsx  DebugDialog.tsx  DebugView.tsx  types.ts
src/types/: api.ts  common.ts  debug.ts  index.ts  pv.ts
src/utils/: archiverApi.test.ts  archiverApi.ts  colorUtils.ts  debounce.ts  types.ts
(+10 files in other folders)
