[package]
name = "rusty-archive-viewer"
version = "0.1.0"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
