[package]
name = "rusty-archive-viewer"
version = "0.1.0"
description = "EPICS Archive Viewer"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "window-all", 
    "http-all"] }
reqwest = { version = "0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "rustls-tls"
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
thiserror = "1.0"
once_cell = "1.8"
futures = "0.3"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync"
] }
url = "2.2.2"
csv = "1.1"
async-trait = "0.1.77"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize for development
[profile.dev]
opt-level = 1

# Optimize for release
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
